force-app/main/default/objects/Revenue_P_L_Allocation__c/Revenue_P_L_Allocation__c.object-meta.xml
<CustomObject>
    <label>Revenue GL Allocation</label>
    <nameField>
        <displayFormat>RPLA-{000000}-{000}</displayFormat>
        <label>Revenue P&amp;L Allocation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Revenue GL Allocations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>