force-app/main/default/objects/Revenue_P_L_Allocation__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Recurring</fullName>
            </value>
            <value>
                <fullName>Time &amp; Materials</fullName>
            </value>
            <value>
                <fullName>Channel Revenue</fullName>
            </value>
            <value>
                <fullName>Intercompany Income</fullName>
            </value>
            <value>
                <fullName>Other Revenue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>