force-app/main/default/objects/Revenue_P_L_Allocation__c/fields/isProceed__c.field-meta.xml
<CustomField>
    <fullName>isProceed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isProceed</label>
    <type>Checkbox</type>
</CustomField>