force-app/main/default/objects/Revenue_P_L_Allocation__c/fields/P_L__c.field-meta.xml
<CustomField>
    <fullName>P_L__c</fullName>
    <label>P&amp;L</label>
    <referenceTo>Profit_Loss__c</referenceTo>
    <relationshipLabel>Revenue GL Allocations</relationshipLabel>
    <relationshipName>Revenue_P_L_Allocations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>