force-app/main/default/objects/Revenue_P_L_Allocation__c/fields/Period_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Period_Start_Date__c</fullName>
    <formula>P_L__r.Period_Start_Date__c</formula>
    <label>Period Start Date</label>
    <type>Date</type>
</CustomField>