force-app/main/default/objects/Revenue_P_L_Allocation__c/fields/PL_Month__c.field-meta.xml
<CustomField>
    <fullName>PL_Month__c</fullName>
    <formula>MONTH(P_L__r.Period_Start_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PL Month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>