force-app/main/default/objects/Revenue_P_L_Allocation__c/fields/PL_Sequence__c.field-meta.xml
<CustomField>
    <fullName>PL_Sequence__c</fullName>
    <formula>GL_Code__r.PL_Category__r.Sequence__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PL Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>