force-app/main/default/objects/Revenue_P_L_Allocation__c/fields/PLCategory__c.field-meta.xml
<CustomField>
    <fullName>PLCategory__c</fullName>
    <formula>GL_Code__r.PL_Category__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PLCategory</label>
    <type>Text</type>
</CustomField>