force-app/main/default/objects/Revenue_P_L_Allocation__c/fields/Quota_Amount__c.field-meta.xml
<CustomField>
    <fullName>Quota_Amount__c</fullName>
    <inlineHelpText>Amount based on achieving 100% of quota.</inlineHelpText>
    <label>Quota Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>