force-app/main/default/objects/Revenue_P_L_Allocation__c/fields/Revenue_Account__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Revenue Account</label>
    <referenceTo>Revenue_Account__c</referenceTo>
    <relationshipLabel>Revenue GL Allocations</relationshipLabel>
    <relationshipName>Revenue_P_L_Allocations_del</relationshipName>
    <type>Lookup</type>
</CustomField>