force-app/main/default/objects/Revenue_P_L_Allocation__c/fields/Revenue_Contract__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field denotes the parent Revenue Contract.</description>
    <label>Revenue Contract</label>
    <referenceTo>Revenue_Contract__c</referenceTo>
    <relationshipLabel>Revenue GL Allocations</relationshipLabel>
    <relationshipName>Revenue_P_L_Allocations</relationshipName>
    <type>Lookup</type>
</CustomField>